Closed Bug 1936223 Opened 11 months ago Closed 11 months ago

Blocked dialog displayed when pasting from clipboard after canceling the initial DLP scan

Categories

(Firefox :: Data Loss Prevention, defect)

Desktop
Windows
defect

Tracking

()

VERIFIED FIXED
135 Branch
Tracking Status
firefox-esr128 --- unaffected
firefox133 --- unaffected
firefox134 --- disabled
firefox135 --- verified

People

(Reporter: bhidecuti, Assigned: gstoll)

References

(Blocks 2 open bugs, Regression)

Details

(Keywords: regression)

Attachments

(2 files)

Attached video video showing the issue

Found in

  • 135.0a1 (2024-12-09)

Affected versions

  • 135.0a1
  • 134.0b8

Preconditions

  • Download the DLP test assets from https://drive.google.com/file/d/1yjqVRuxdKV3WnO7D2wzMgDXBuYBxUgVw/view
  • Create a distribution folder inside the Firefox folder and paste the policies-1.json to it and then rename it to policies.json
  • Run the DLP agent in CMD using: .\content_analysis_sdk_agent.exe --user --toblock=.\d{3}-?\d{2}-?\d{4}. --towarn=.warn. --delays=10

Tested platforms

  • Affected platforms: Windows 10/11
  • Unaffected platforms: macOS, Ubuntu

Steps to reproduce

  1. Go to any random webpage (e.g. wikipedia.org)
  2. Copy any random text and paste it inside the Search field
  3. Press the “Cancel” button from the “Scan in progress” dialog
  4. Paste again the content from the clipboard and observe the behavior

Expected result

  • “Scan in progress” dialog is displayed

Actual result

  • “You’re not permitted to paste this content” dialog is displayed

Regression range

Additional notes

  • See the attached video
  • Reproducing regardless of the pasted text

:gstoll, since you are the author of the regressor, bug 1915351, could you take a look? Also, could you set the severity field?

For more information, please visit BugBot documentation.

Flags: needinfo?(gstoll)
Assignee: nobody → gstoll
Status: NEW → ASSIGNED
Flags: needinfo?(gstoll)

After bug 1918027 and bug 1915351 we don't need the cache for
full clipboard pastes anymore, and using it leads to some inconsistent
behavior like in this bug.

Pushed by gstoll@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/2ff5e9be6f5f don't use content analysis cache for full clipboard pastes r=dlp-reviewers,handyman
Status: ASSIGNED → RESOLVED
Closed: 11 months ago
Resolution: --- → FIXED
Target Milestone: --- → 135 Branch

Verified as fixed using Firefox Nightly 135.0a1 (2024-12-12), on Windows 10/11. Blocked dialog is no longer displayed when pasting from clipboard after canceling the initial DLP scan.

Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: