Bug 1936223 - don't use content analysis cache for full clipboard pastes r=dlp-reviewers,handyman

After bug 1918027 and bug 1915351 we don't need the cache for
full clipboard pastes anymore, and using it leads to some inconsistent
behavior like in this bug.

Differential Revision: https://phabricator.services.mozilla.com/D231688